HTML content improvement

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container" role="main">
   <div class="jumbotron">
-     <h1>Papa Johns Google App Engine Flexible Environment</h1>
+     <h1>Papa John's Google App Engine Flexible Environment</h1>
      <p>App Engine Managed VMs, Google Cloud Datastore, and SparkJava PoC.</p>
   </div>
   <div class="page-header">
