--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -117,7 +117,7 @@
       datastoreAction.unbind();
       var modal = $(this);
       if (action === "add") {
-        modal.find('.modal-title').text("Add a user");
+        modal.find('.modal-title').text("Add a new Papa John's user");
         modal.find('#name').val("");
         modal.find('#email').val("");
         datastoreAction.click(function () {
