--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -10,7 +10,7 @@
 <div class="container" role="main">
   <div class="jumbotron">
      <h1>Papa John's Google App Engine Flexible Environment</h1>
-     <p>App Engine Managed VMs, Google Cloud Datastore, and SparkJava PoC.</p>
+     <p>App Engine Flex Env, Google Cloud Datastore, and SparkJava PoC.</p>
   </div>
   <div class="page-header">
     <h1>All users</h1>
