--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -1,40 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <meta charset="UTF-8">
+    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </head>
 <body>
-<div class="container" role="main">
-  <div class="jumbotron">
-     <h1>Papa John's Google App Engine Flexible Environment</h1>
-     <p>App Engine Flex Env, Google Cloud Datastore, and SparkJava PoC.</p>
-  </div>
-  <div class="page-header">
-    <h1>All users</h1>
-    <button class="btn btn-primary datastore-add" data-action="add"
-        data-toggle="modal" data-target="#datastoreModal" pull-right>
-      <span class="glyphicon glyphicon-plus"></span> Add a new user
-    </button>
-    <div class="row">
-      <div class="col-md-12">
-        <table class="table table-striped">
-          <thead>
-            <tr>
-              <th>ID</th>
-              <th>Name</th>
-              <th>Email</th>
-              <th>Actions</th>
-            </tr>
-          </thead>
-        <tbody id="content">
-        </tbody>
-        </table>
-      </div>
+<div class="jumbotron jumbotron-billboard">
+    <div class="img"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <h1>Papa John's Google App Engine Flexible Environment</h1>
+                <!--<a href="#" class="btn btn-success btn-lg">Sign Up</a>-->
+            </div>
+        </div>
     </div>
-  </div>
+</div>
+
+<div class="container" role="main">
+    <div class="jumbotron">
+        <p>App Engine Flex Env, Google Cloud Datastore, and SparkJava PoC.</p>
+    </div>
+    <div class="page-header">
+        <h1>All users</h1>
+        <button class="btn btn-primary datastore-add" data-action="add"
+                data-toggle="modal" data-target="#datastoreModal" pull-right>
+            <span class="glyphicon glyphicon-plus"></span> Add a new user
+        </button>
+        <div class="row">
+            <div class="col-md-12">
+                <table class="table table-striped">
+                    <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Name</th>
+                        <th>Email</th>
+                        <th>Actions</th>
+                    </tr>
+                    </thead>
+                    <tbody id="content">
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 </div>
 <script>
   $(function () {
@@ -135,38 +146,39 @@
       }
     });
   }
+
 </script>
 <div class="modal fade" id="datastoreModal" tabindex="-1" role="dialog">
-  <div class="modal-dialog" role="dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">
-          <span>&times;</span>
-        </button>
-        <h4 class="modal-title" id="datastoreModalTitle">Add a user</h4>
-      </div>
-      <div class="modal-body">
-        <form>
-          <div class="form-group">
-            <label for="name" class="control-label">Name:</label>
-            <input type="text" class="form-control" id="name">
-          </div>
-          <div class="form-group">
-            <label for="email" class="control-label">Email:</label>
-            <input type="text" class="form-control" id="email">
-          </div>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">
-          Cancel
-        </button>
-        <button type="button" id="datastoreAction" class="btn btn-primary">
-          Save
-        </button>
-      </div>
+    <div class="modal-dialog" role="dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">
+                    <span>&times;</span>
+                </button>
+                <h4 class="modal-title" id="datastoreModalTitle">Add a user</h4>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="form-group">
+                        <label for="name" class="control-label">Name:</label>
+                        <input type="text" class="form-control" id="name">
+                    </div>
+                    <div class="form-group">
+                        <label for="email" class="control-label">Email:</label>
+                        <input type="text" class="form-control" id="email">
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">
+                    Cancel
+                </button>
+                <button type="button" id="datastoreAction" class="btn btn-primary">
+                    Save
+                </button>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
 </body>
 </html>
