--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h1>Papa John's Google App Engine Flexible Environment</h1>
+                <h1>Last Papa John's Google App Engine Flexible Environment</h1>
                 <!--<a href="#" class="btn btn-success btn-lg">Sign Up</a>-->
             </div>
         </div>
