--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -21,7 +21,7 @@
 
 <div class="container" role="main">
     <div class="jumbotron">
-        <p>App Engine Flex Env, Google Cloud Datastore, and SparkJava PoC.</p>
+        <p>App Engine Flex Env, Google Cloud Datastore, and SparkJava.</p>
     </div>
     <div class="page-header">
         <h1>All users</h1>
